mudança no texto de resultado

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 
         <div class="sessao" id="sessaoResultado" hidden>
-            <h2>Resultado</h2>
+            <h2>Resultado arabixa</h2>
             <div id="resultado"></div>
         </div>
 
