Lista de carnes funcionando, prevenções de erro caso não marcação, ocultar resetando a lista

--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
 
                 <ul id="carnesVermelhas">
                     <li class="options">
-                        <input type="checkbox">
+                        <input type="checkbox" class="carnes">
                         <label>Picanha</label>
                     </li>
 
                     <li class="options">
-                        <input type="checkbox">
+                        <input type="checkbox" class="carnes">
                         <label>Costela</label>
                     </li>
 
                     <li class="options">
-                        <input type="checkbox">
+                        <input type="checkbox" class="carnes">
                         <label>Vazio</label>
                     </li>
                 </ul>
@@ -62,17 +62,17 @@
 
                 <ul id="carnesBrancas">
                     <li class="options">
-                        <input type="checkbox">
+                        <input type="checkbox" class="carnes">
                         <label>Coxinha da asa</label>
                     </li>
 
                     <li class="options">
-                        <input type="checkbox">
+                        <input type="checkbox" class="carnes">
                         <label>Coxa</label>
                     </li>
 
                     <li class="options">
-                        <input type="checkbox">
+                        <input type="checkbox" class="carnes">
                         <label>Sobrecoxa</label>
                     </li>
                 </ul>
@@ -83,17 +83,17 @@
 
                 <ul id="aperitivos">
                     <li class="options">
-                        <input type="checkbox">
+                        <input type="checkbox" class="carnes">
                         <label>Coração</label>
                     </li>
 
                     <li class="options">
-                        <input type="checkbox">
+                        <input type="checkbox" class="carnes">
                         <label>Salsichão</label>
                     </li>
 
                     <li class="options">
-                        <input type="checkbox">
+                        <input type="checkbox" class="carnes">
                         <label>Pão com alho</label>
                     </li>
                 </ul>
@@ -104,7 +104,7 @@
 
 
         <div class="sessao" id="sessaoResultado" hidden>
-            <h2>Resultado arabixa</h2>
+            <h2>Total aproximado</h2>
             <div id="resultado"></div>
         </div>
 
